合并一个脚本